--- a/src/app/usit/components/tech-support-list/tech-support-list.component.html
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.html
@@ -62,7 +62,7 @@
           <ng-container matColumnDef="Technology">
             <th mat-header-cell *matHeaderCellDef  mat-sort-header sortActionDescription="Sort by Technology">
               Technology </th>
-            <td mat-cell *matCellDef="let element"> {{element.technology|titlecase}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.technologyarea|titlecase}} </td>
           </ng-container>
   
           <!-- Designation Column -->
