--- a/src/app/usit/components/openreqs/scrape-activity/scrape-activity.component.html
+++ b/src/app/usit/components/openreqs/scrape-activity/scrape-activity.component.html
@@ -25,21 +25,18 @@
 
 
 
-                <!-- SNo Column -->
                 <ng-container matColumnDef="SerialNum">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
                         S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
-                <!-- Name Column-->
                 <ng-container matColumnDef="portalName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by portalName">
                         Portal Name</th>
                     <td mat-cell *matCellDef="let element"> {{element?.portal_name|titlecase}} </td>
                 </ng-container>
 
-                <!-- Technology Column-->
                 <ng-container matColumnDef="NumberOfRequirements">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header
                         sortActionDescription="Sort by NumberOfRequirements">
@@ -49,7 +46,6 @@
                         </span> </td>
                 </ng-container>
 
-                <!-- Visa Column-->
                 <ng-container matColumnDef="BatchInterval">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by BatchInterval">
                         Batch Interval </th>
@@ -57,22 +53,19 @@
                         {{element?.interview_date}} {{element?.batch_interval}}</td>
                 </ng-container>
 
-                <!-- Experience Column-->
                 <ng-container matColumnDef="startTime">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by startTime"
                         style="width:4rem"> StartDate </th>
-                    <td mat-cell *matCellDef="let element" style="width:4rem">{{element?.start_time}} </td>
+                    <td mat-cell *matCellDef="let element" style="width:4rem">{{element?.start_time | date: 'dd-MM-yyyy HH:mm'}} </td>
                 </ng-container>
 
-                <!-- Rate Column-->
                 <ng-container matColumnDef="endTime">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by endTime">
                         EndDate </th>
-                    <td mat-cell *matCellDef="let element"> {{ element?.end_time }}
+                    <td mat-cell *matCellDef="let element"> {{ element?.end_time | date: 'dd-MM-yyyy HH:mm' }}
                     </td>
                 </ng-container>
 
-                <!-- Priority Column-->
                 <ng-container matColumnDef="duration">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by duration">
                         Duration </th>
@@ -80,7 +73,6 @@
                     </td>
                 </ng-container>
 
-                <!-- Current Location Column-->
                 <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by status">
                         Status
