--- a/src/app/usit/components/recruitment/requirement-list/requirement-list.component.scss
+++ b/src/app/usit/components/recruitment/requirement-list/requirement-list.component.scss
@@ -127,7 +127,7 @@ tbody {
 }
 
 .requirement-table-style {
-  max-height: 77vh; /* Or any height you want */
+  max-height: 80vh; /* Or any height you want */
   overflow: auto;
 }
 
@@ -305,3 +305,14 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
     margin-bottom: 17px !important;
 }
 
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
+}
