--- a/src/app/usit/components/sales/closure-list/closure-list.component.scss
+++ b/src/app/usit/components/sales/closure-list/closure-list.component.scss
@@ -136,7 +136,7 @@
   }
   
   .closure-table-style {
-     max-height: 78vh; /* Or any height you want */
+     max-height: 80vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -269,3 +269,14 @@
     cursor: pointer;
     color: #0275d8;
   }
+  .mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
+}
