--- a/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
+++ b/src/app/usit/components/sales/consultant-list/add-consultant/add-consultant.component.html
@@ -23,22 +23,34 @@
         <mat-form-field appearance="fill">
           <mat-label>First Name</mat-label>
           <input matInput formControlName="firstname" maxlength="50" (input)="camelCase($event)">
-          <mat-error *ngIf="consultantForm.get('firstname').hasError('required')">First
-            Name is Required</mat-error>
-          <mat-error *ngIf="consultantForm.get('firstname').hasError('minlength')">First
-            Name must be at least 6
-            characters</mat-error>
-          <mat-error *ngIf="consultantForm.get('firstname').hasError('maxlength')">First
-            Name must not exceed 100
-            characters</mat-error>
+         <mat-error *ngIf="consultantForm.get('firstname')?.hasError('required')">First Name is Required</mat-error>
+            <mat-error *ngIf="consultantForm.get('firstname')?.hasError('minlength')">First Name must be at least 6
+              characters</mat-error>
+            <mat-error *ngIf="consultantForm.get('firstname')?.hasError('maxlength')">First Name must not exceed 100
+              characters</mat-error>
+            <mat-error *ngIf="consultantForm.get('firstname')?.hasError('whitespace')">
+              Whitespace-only value is not allowed
+            </mat-error>
+            <mat-error *ngIf="consultantForm.get('firstname')?.hasError('invalidChars')">
+              Only digits or only special characters are not allowed
+            </mat-error>
         </mat-form-field>
 
         <!-- last Name -->
         <mat-form-field appearance="fill">
           <mat-label>Last Name</mat-label>
           <input matInput formControlName="lastname" maxlength="35" (input)="camelCase($event)">
-          <mat-error *ngIf="consultantForm.get('lastname').hasError('required')">Last
-            Name is Required</mat-error>
+          <mat-error *ngIf="consultantForm.get('lastname')?.hasError('required')">Last Name is Required</mat-error>
+            <mat-error *ngIf="consultantForm.get('lastname')?.hasError('minlength')">Last Name must be at least 6
+              characters</mat-error>
+            <mat-error *ngIf="consultantForm.get('lastname')?.hasError('maxlength')">Last Name must not exceed 100
+              characters</mat-error>
+            <mat-error *ngIf="consultantForm.get('lastname')?.hasError('whitespace')">
+              Whitespace-only value is not allowed
+            </mat-error>
+            <mat-error *ngIf="consultantForm.get('lastname')?.hasError('invalidChars')">
+              Only digits or only special characters are not allowed
+            </mat-error>
         </mat-form-field>
 
         <!-- consulatant Email -->
@@ -56,7 +68,7 @@
 
         <!-- Contact Number-->
         <mat-form-field appearance="fill">
-          <mat-label> Contact Number </mat-label>
+          <mat-label> Contact Number <span style="color: red">*</span></mat-label>
           <ngx-mat-intl-tel-input class="intl-input" maxlength="18" [preferredCountries]="['in','us']"
             formControlName="contactnumber" (change)="changeFn($event)" (countryChanged)="onContryChange($event)"
             [enablePlaceholder]="true" [enableSearch]="true" name="contactnumber" id="intlInput" #contactnumber #pNumb>
@@ -154,6 +166,13 @@
           <input matInput formControlName="position" placeholder="Position" maxlength="30" (input)="camelCase($event)">
           <mat-error *ngIf="consultantForm.get('position')!.hasError('required')">Position
             is Required</mat-error>
+               <mat-error *ngIf="consultantForm.get('position')?.hasError('whitespace')">
+            Whitespace-only value is not allowed.
+          </mat-error>
+
+          <mat-error *ngIf="consultantForm.get('position')?.hasError('invalidName')">
+            Must contain at least one letter.
+          </mat-error>
         </mat-form-field>
 
         <!-- status -->
@@ -167,6 +186,7 @@
           <mat-error *ngIf="consultantForm.get('status')!.hasError('required')">Status is
             Required
           </mat-error>
+        
         </mat-form-field>
 
 <!-- Assign consultant -->
@@ -229,6 +249,13 @@
             (onAddressChange)="handleAddressChange($event)">
           <mat-error *ngIf="consultantForm.get('currentlocation')!.hasError('required')">Location
             Name is Required</mat-error>
+                    <mat-error *ngIf="consultantForm.get('currentlocation')?.hasError('whitespace')">
+            Whitespace-only value is not allowed.
+          </mat-error>
+
+          <mat-error *ngIf="consultantForm.get('currentlocation')?.hasError('invalidName')">
+            Must contain at least one letter.
+          </mat-error>
         </mat-form-field>
         <!-- Technology -->
         <!-- <div class="select-technology-field">
@@ -290,7 +317,7 @@
         <!-- Rate Radio group-->
         <div class="radio-group" style="width: 80%;">
 
-          <mat-label>Rate Type</mat-label>
+          <mat-label>Rate Type <span style="color: red">* </span></mat-label>
           <mat-radio-group aria-label="Select an option" formControlName="ratetype">
             <mat-radio-button *ngFor="let opt of selectOptionObj.radioOptions.rate" [value]="opt.value"
               (change)="onRadioChange($event)">{{opt.value}}</mat-radio-button>
@@ -301,7 +328,7 @@
         <!-- Relocate Other Radio group-->
         <div class="radio-group" style="width: 80%;">
 
-          <mat-label>Relocation Type</mat-label>
+          <mat-label>Relocation Type <span style="color: red">* </span></mat-label>
           <mat-radio-group aria-label="Select an option" formControlName="relocation">
             <mat-radio-button *ngFor="let opt of selectOptionObj.radioOptions.relocation" [value]="opt.value"
               (change)="onRelocationRadioChange($event)">{{opt.value}}</mat-radio-button>
