--- a/src/app/usit/components/sales/hot-list/hot-list.component.scss
+++ b/src/app/usit/components/sales/hot-list/hot-list.component.scss
@@ -123,7 +123,7 @@
   }
   
   .hot-list-table-style {
-     max-height: 78vh; /* Or any height you want */
+     max-height: 80vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -205,4 +205,15 @@
 
 .bold-label {
   font-weight: bold;
+}
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
 }
