--- a/src/app/usit/components/sales/interview-list/interview-list.component.scss
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.scss
@@ -38,7 +38,6 @@
   
   .table-wrapper {
     flex: 1;
-    overflow: auto;
   }
   
   table {
@@ -127,7 +126,7 @@
   }
   
   .interview-table-style {
-     max-height: 77vh; /* Or any height you want */
+     max-height: 80vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -296,3 +295,14 @@
     margin-bottom: 16px !important;
 }
 
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
+}
