--- a/src/app/usit/components/sales/submission-list/submission-list.component.scss
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.scss
@@ -172,7 +172,6 @@ padding: 15px;
 // }
 .vendor-table-style {
   max-height: 80vh; /* Or any height you want */
-  overflow: auto;
 }
 .no-data-found {
   display: flex;
@@ -376,4 +375,15 @@ ul.breadcrumb li:last-child {
 
 table {
   width: 100%;
+}
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
 }
