--- a/src/app/usit/components/tech-support-list/tech-support-list.component.scss
+++ b/src/app/usit/components/tech-support-list/tech-support-list.component.scss
@@ -39,8 +39,6 @@
   .table-wrapper{
     flex: 1;
     // padding: 4px;
-    overflow-y: auto;
-    overflow-x: hidden;
     margin: 4px;
   }
   table {
@@ -285,4 +283,15 @@
     width: 100%;
     min-height: var(--mat-paginator-container-size);
     margin-bottom:3px !important
+}
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
 }
