--- a/src/app/usit/components/vendor-management/blacklisted-companies-list/blacklisted-companies-list.component.scss
+++ b/src/app/usit/components/vendor-management/blacklisted-companies-list/blacklisted-companies-list.component.scss
@@ -172,7 +172,7 @@
   }
   
   .vendor-table-style {
-    max-height: 77vh; /* Or any height you want */
+    max-height: 80vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -344,3 +344,14 @@
         margin-bottom: 12px !important;
 }
 
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
+}
