--- a/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/future-primary-vendor-list/future-primary-vendor-list.component.scss
@@ -171,7 +171,7 @@
   }
   
   .vendor-table-style {
-    max-height: 78vh; /* Or any height you want */
+    max-height: 80vh; /* Or any height you want */
   overflow: auto;
   }
   
@@ -339,4 +339,15 @@
     width: 100%;
     min-height: var(--mat-paginator-container-size);
     margin-bottom:-2px !important
+}
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
 }
