--- a/src/app/usit/components/vendor-management/known-vendor-contacts/add-known-vendor-contacts/add-known-vendor-contacts.component.html
+++ b/src/app/usit/components/vendor-management/known-vendor-contacts/add-known-vendor-contacts/add-known-vendor-contacts.component.html
@@ -20,6 +20,13 @@
                     <mat-error *ngIf="hotlistForm.get('employeeName')!.hasError('required')">Employee Name
                         is Required
                     </mat-error>
+                      <mat-error *ngIf="hotlistForm.get('employeeName')?.hasError('whitespace')">
+    Whitespace-only value is not allowed.
+  </mat-error>
+
+  <mat-error *ngIf="hotlistForm.get('employeeName')?.hasError('invalidName')">
+     Must contain at least one letter.
+  </mat-error>
                 </mat-form-field>
 
                 <!-- Vendor -->
