--- a/src/app/usit/components/vendor-management/vendor-list/add-vendor/add-vendor.component.html
+++ b/src/app/usit/components/vendor-management/vendor-list/add-vendor/add-vendor.component.html
@@ -28,9 +28,12 @@
             <mat-error *ngIf="vendorForm.get('company')!.hasError('required')">Company Name
               is Required
             </mat-error>
+            <mat-error *ngIf="vendorForm.get('company')!.hasError('whitespace')">
+  Company name cannot have leading, trailing, or only spaces
+</mat-error>
           </mat-form-field>
           
-          <mat-form-field>
+          <mat-form-field style="margin-bottom: 20px !important;">
             <mat-label>Select Country</mat-label>
             <mat-select formControlName="country">
               <mat-option value="USA">USA</mat-option>
