--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
@@ -126,9 +126,22 @@ tbody {
   }
 }
 
+.vendor-table-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .vendor-table-style {
-  max-height: 77vh; /* Or any height you want */
-  overflow: auto;
+  max-height: 80vh;
+  
+}
+
+.paginator {
+  padding: 10px;
+  background: #fff; /* Optional: to make it more visible */
+  position: sticky;
+  bottom: 0;
 }
 .no-data-found {
   display: flex;
@@ -284,6 +297,18 @@ ul.breadcrumb li:last-child {
     letter-spacing: var(--mat-paginator-container-text-tracking);
     margin-bottom: 17px !important;
 }
+.mat-mdc-paginator {
+  position: fixed !important;
+  bottom: 0 !important;
+  left: 0 !important;
+  width: 100% !important;
+  background: #fff !important;
+  z-index: 1000 !important;
+  padding: 8px 16px !important;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
+  margin: 0 !important; /* remove any default margin */
+}
+
  .mdc-data-table__cell, .mdc-data-table__header-cell {
     padding: 0 4px 0 4px;
     border-right: 1px solid lightgray !important;
