--- a/src/app/usit/components/sales/interview-list/interview-list.component.html
+++ b/src/app/usit/components/sales/interview-list/interview-list.component.html
@@ -74,7 +74,7 @@
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateAndToI" mat-sort-header>
                         Date & Time of Interview </th>
                     <td mat-cell *matCellDef="let element" nowrap>
-                        {{element?.interview_date | date:'dd-MM-yyyy '}} </td>
+                        {{element?.interview_date }} </td>
                 </ng-container>
 
                 <!-- Requirement-->
@@ -111,7 +111,7 @@
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DateOfSubmission"
                         mat-sort-header>
                         Date of Submission</th>
-                    <td mat-cell *matCellDef="let element"> {{element.createddate | date:'dd-MM-yyyy'}}
+                    <td mat-cell *matCellDef="let element"> {{element.createddate }}
                     </td>
                 </ng-container>
                 <!-- Project Location Column -->
