--- a/src/app/usit/components/sales/submission-list/submission-list.component.html
+++ b/src/app/usit/components/sales/submission-list/submission-list.component.html
@@ -61,7 +61,7 @@
                 <ng-container matColumnDef="Dos">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Date" mat-sort-header sticky> DOS
                     </th>
-                    <td mat-cell *matCellDef="let element" nowrap> {{element?.createddate | date:'dd-MM-yyyy '}} </td>
+                    <td mat-cell *matCellDef="let element" nowrap> {{element?.createddate }} </td>
                 </ng-container>
                 <!-- ID-->
                 <!-- <ng-container matColumnDef="Id">
