--- a/src/app/usit/components/reports/employee-reports/employee-reports.component.html
+++ b/src/app/usit/components/reports/employee-reports/employee-reports.component.html
@@ -23,8 +23,11 @@
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
           <mat-datepicker #picker2 color="primary"></mat-datepicker>
+     
          </mat-form-field>
-         &nbsp;&nbsp;
+           
+
+         
 
 
         <mat-form-field>
@@ -57,6 +60,7 @@
       </mat-card-content><!-- [disabled]="!privilegeServ.hasPrivilege('US_M1EXCELIMP')" -->
     </mat-card>
   </form>
+<div class="center-container">
 
   <mat-card class="matcards " >
     <mat-card-content>
@@ -171,15 +175,11 @@
         </section>
       </div>
 
-      <!-- <div class="paginator">
-        <mat-paginator (page)="handlePageEvent($event)" [length]="totalItems" [pageSize]="pageSize" [disabled]="false"
-          [showFirstLastButtons]="showFirstLastButtons" [pageSizeOptions]="showPageSizeOptions ? pageSizeOptions : []"
-          [hidePageSize]="true" [pageIndex]="currentPageIndex" aria-label="Select page">
-        </mat-paginator>
-      </div> -->
+   
 
     </mat-card-content>
   </mat-card >
+  </div>
 <div style="margin-bottom: 2220px;">
 
 </div>
