--- a/src/app/usit/components/openreqs/cpv-fpv-open-requirements/cpv-fpv-open-requirements.component.html
+++ b/src/app/usit/components/openreqs/cpv-fpv-open-requirements/cpv-fpv-open-requirements.component.html
@@ -33,8 +33,10 @@
                 <ng-container matColumnDef="posted_on">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Name"
                         style="width: 2%">Posted On</th>
-                    <td mat-cell *matCellDef="let element" nowrap style="width: 2%"> {{element?.posted_on |
-                        date:'MM-dd-yyyy HH:mm' }} </td>
+                   <td mat-cell *matCellDef="let element" nowrap style="width: 2%">
+  {{ element?.posted_on ? (element.posted_on | date: 'MM-dd-yyyy HH:mm') : '-' }}
+</td>
+
                 </ng-container>
 
                 <!-- Title Column-->
