--- a/src/app/usit/components/employee-list/employee-list.component.html
+++ b/src/app/usit/components/employee-list/employee-list.component.html
@@ -7,6 +7,14 @@
   <div class="header-container mat-elevation-z1">
     <span class="header-text">Employees
       <mat-icon class="item-account"  matTooltip="Team Architecture" style="cursor:pointer" (click)="Teamflow()">account_tree</mat-icon>
+          <mat-icon
+      class="item-account"
+      matTooltip="Login Tracking"
+      style="cursor:pointer; margin-left: 8px;"
+      (click)="trackLogin()"
+    >
+      login
+    </mat-icon>
 </span>
     <div class="emp-actions">
       <button [disabled]="!privilegeServ.hasPrivilege('ADD_EMPLOYEE')" mat-icon-button disableRipple class="add-user"
